--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/project/index.html"
+    "livePreview.defaultPreviewPath": "/6.4 Motivation Meme Project/index.html"
 }
